--- a/src/main/resources/templates/notifications/eventList.html
+++ b/src/main/resources/templates/notifications/eventList.html
@@ -5,15 +5,19 @@
     <meta charset="UTF-8">
     <title>이벤트 페이지</title>
 
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap CSS & JS 추가 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" th:href="@{/css/notifications/eventList.css}">
-
-    <!-- jQuery -->
+    <!-- jQuery 추가 -->
     <script src="https://code.jquery.com/jquery-3.6.4.js"
         integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+
+    <!-- 커스텀 CSS 및 JS 추가 -->
+    <link rel="stylesheet" th:href="@{/css/notifications/eventList.css}">
+    <link rel="stylesheet" th:href="@{/css/fragments/header.css}">
+    <link rel="stylesheet" th:href="@{/css/fragments/footer.css}">
+    <script th:src="@{/js/notifications/eventList.js}"></script>
 </head>
 
 <body>
@@ -25,18 +29,53 @@
     <div class="container mt-5">
         <div class="row row-cols-1 row-cols-md-4 g-4">
             <!-- 이벤트 카드 반복 -->
-            <div class="col" th:each="event : ${eventList}">
-                <a th:href="@{/event/detail/{id}(id=${event.id})}" class="card-link">
+            <div class="col">
+                <a href="/event/detail/1" class="card-link">
                     <div class="card h-100">
-                        <img th:src="@{/images/event{id}.jpg(id=${event.id})}" class="card-img-top" th:alt="${event.title} 이미지">
+                        <img src="/images/event1.jpg" class="card-img-top" alt="이벤트 이미지 1">
                         <div class="card-body">
-                            <h5 class="card-title" th:text="${event.title}">이벤트 제목</h5>
-                            <p class="card-text" th:text="${event.description}">이벤트 설명입니다.</p>
+                            <h5 class="card-title">이벤트 1</h5>
+                            <p class="card-text">이벤트 1 설명입니다.</p>
                         </div>
                     </div>
                 </a>
             </div>
-            <!-- //이벤트 카드 반복 끝 -->
+
+            <div class="col">
+                <a href="/event/detail/2" class="card-link">
+                    <div class="card h-100">
+                        <img src="/images/event2.jpg" class="card-img-top" alt="이벤트 이미지 2">
+                        <div class="card-body">
+                            <h5 class="card-title">이벤트 2</h5>
+                            <p class="card-text">이벤트 2 설명입니다.</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="col">
+                <a href="/event/detail/3" class="card-link">
+                    <div class="card h-100">
+                        <img src="/images/event3.jpg" class="card-img-top" alt="이벤트 이미지 3">
+                        <div class="card-body">
+                            <h5 class="card-title">이벤트 3</h5>
+                            <p class="card-text">이벤트 3 설명입니다.</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="col">
+                <a href="/event/detail/4" class="card-link">
+                    <div class="card h-100">
+                        <img src="/images/event4.jpg" class="card-img-top" alt="이벤트 이미지 4">
+                        <div class="card-body">
+                            <h5 class="card-title">이벤트 4</h5>
+                            <p class="card-text">이벤트 4 설명입니다.</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </div>
     </div>
 
