--- a/src/main/resources/static/css/notifications/eventWrite.css
+++ b/src/main/resources/static/css/notifications/eventWrite.css
@@ -1,26 +1,15 @@
-
 body {
-    background: linear-gradient(135deg, rgb(193, 192, 255), rgb(193, 192, 255));
-    margin: 0;
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    background: linear-gradient(135deg, rgba(193, 192, 255, 0.5),rgba(193, 192, 255, 0.5));
 }
 
 .container {
-    max-width: 800px;
+    max-width: 1100px;
     padding: 30px;
     background-color: rgba(255, 255, 255, 0.9);
     border: 1px solid rgb(193, 192, 255);
     border-radius: 12px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease-in-out;
-}
-
-.container:hover {
-    transform: translateY(-10px);
 }
 
 h1 {
@@ -70,14 +59,13 @@ textarea {
     resize: none;
 }
 
-.btn-group {
+.d-flex {
     display: flex;
-    justify-content: flex-end;
-    gap: 15px;
+    justify-content: space-between;
     margin-top: 30px;
 }
 
-.btn-group button {
+button {
     padding: 12px 25px;
     font-size: 16px;
     border: none;
@@ -90,11 +78,13 @@ textarea {
     background-color: rgb(193, 192, 255);
     color: white;
     font-weight: 600;
+    border: solid 1px rgb(193, 192, 255);
 }
 
 .btn-primary:hover {
     background-color: rgba(193, 192, 255, 0.8);
     box-shadow: 0 4px 10px rgba(193, 192, 255, 0.3);
+    border: solid 1px rgb(193, 192, 255);
 }
 
 .btn-secondary {
@@ -110,17 +100,5 @@ textarea {
 .btn-secondary:hover {
     background-color: rgb(193, 192, 255);
     color: white;
-}
-
-.date-time-group {
-    display: flex;
-    gap: 20px;
-}
-
-.date-time-group .form-group {
-    flex: 1;
-}
-
-.file-group {
-    margin-top: 20px;
+    border: 1px solid rgb(193, 192, 255);
 }
