--- a/src/main/resources/templates/notifications/eventList.html
+++ b/src/main/resources/templates/notifications/eventList.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <title>이벤트 페이지</title>
 
-    <!-- Bootstrap CSS & JS 추가 -->
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- jQuery 추가 -->
     <script src="https://code.jquery.com/jquery-3.6.4.js"
@@ -22,8 +21,7 @@
 
 <body>
     <!-- Header Fragment -->
-    <header th:replace="~{fragments/header :: headerFragment}">
-    </header>
+    <header th:replace="~{fragments/header :: headerFragment}"></header>
 
     <!-- Main Content -->
     <div class="container mt-5">
@@ -80,12 +78,10 @@
     </div>
 
     <!-- Footer Fragment -->
-    <footer th:replace="~{fragments/footer :: footerFragment}">
-    </footer>
+    <footer th:replace="~{fragments/footer :: footerFragment}"></footer>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
 
 </html>
