--- a/src/main/resources/templates/notifications/eventView.html
+++ b/src/main/resources/templates/notifications/eventView.html
@@ -5,20 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>이벤트 상세 페이지</title>
-
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" th:href="@{/css/notifications/eventView.css}">
-
-    <!-- jQuery -->
+    <!-- jQuery 추가 -->
     <script src="https://code.jquery.com/jquery-3.6.4.js"
         integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
 
+    <!-- 커스텀 CSS 및 JS 추가 -->
+    <link rel="stylesheet" th:href="@{/css/notifications/eventView.css}">
+    <link rel="stylesheet" th:href="@{/css/fragments/header.css}">
+    <link rel="stylesheet" th:href="@{/css/fragments/footer.css}">
+    <script th:src="@{/js/notifications/eventView.js}"></script>
 </head>
 
 <body>
+    <!-- Header Fragment -->
+    <header th:replace="~{fragments/header :: headerFragment}"></header>
 
     <!-- 배너 이미지와 이벤트 제목 -->
     <div class="banner">
@@ -54,6 +57,8 @@
 
         </div>
     </div>
+    <!-- Footer Fragment -->
+    <footer th:replace="~{fragments/footer :: footerFragment}"></footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
