--- a/src/main/resources/templates/contest/ContestUpload1.html
+++ b/src/main/resources/templates/contest/ContestUpload1.html
@@ -17,7 +17,7 @@
         </div>
 
         <h3>상금 설정</h3>
-        <p class="description">2명 이상의 1등 작품을 선정하거나, 3등까지 작품을 선정하는 콘테스트를 구성할 수 있습니다. </p>
+        <p class="description">2명 이상의 1등 작품을 선정하거나,  최대 3등까지 작품을 선정하는 콘테스트를 구성할 수 있습니다. </p>
 
         <div id="prizeContainer">
             <!-- 1등 필드 (고정) -->
@@ -48,6 +48,7 @@
 
         <div class="date-settings">
             <h3>개최 기간 설정</h3>
+            최소 7일
             <div class="flex-container">
                 <div>
                     <label for="conStartDate">시작 날짜</label>
