프론트단 페이지 추가 및 CSS 스타일링 작업 완료 새 페이지 추가 및 관련 CSS 수정 프론트엔드 페이지 추가와 스타일링 개선 CSS 파일 업데이트 및 새 페이지 디자인 적용

--- a/src/main/resources/static/css/user/MyPageUpload.css
+++ b/src/main/resources/static/css/user/MyPageUpload.css
@@ -25,8 +25,8 @@
 /* header 영역 */
 header
 {
-    height: 145px;
-    border-bottom: 1px solid var(--line-gray);
+    /* height: 145px;
+    border-bottom: 1px solid var(--line-gray); */
 }
 
 /* main 영역 */
