--- a/src/main/resources/static/css/notifications/eventView.css
+++ b/src/main/resources/static/css/notifications/eventView.css
@@ -1,16 +1,5 @@
-@import url('https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css');
-
-body {
-    font-family: 'NanumSquare', sans-serif;
-    background-color: #f4f4f9;
-    margin: 0;
-    padding: 0;
-    color: #333;
-}
-
 .banner {
     background-image: url('event-banner.jpg');
-    /* 이벤트 배너 이미지 경로 */
     background-size: cover;
     background-position: center;
     height: 350px;
@@ -20,27 +9,22 @@ body {
     justify-content: center;
     align-items: center;
     text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
-    margin-bottom: 25px;
-    /* 간격 줄이기 */
 }
 
-.banner h1 {
-    font-size: 45px;
-    /* 원래 50px에서 45px로 줄임 */
+.banner h2 {
+    font-size: 40px;
     background-color: rgba(0, 0, 0, 0.6);
-    padding: 20px 40px;
+    padding: 20px 30px;
     border-radius: 10px;
 }
 
 .event-container {
     max-width: 1100px;
-    margin: 0 auto;
-    padding: 20px;
+    margin: 0 auto 0;
 }
 
 .event-details {
     padding: 30px 20px;
-    /* 패딩 유지 */
     background-color: white;
     border-radius: 8px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
@@ -49,16 +33,13 @@ body {
 .event-details h2 {
     color: #212529;
     font-size: 30px;
-    /* 원래 36px에서 30px로 조정 */
     margin-bottom: 30px;
-    /* 간격 조정 */
     border-bottom: 2px solid #ddd;
     padding-bottom: 15px;
 }
 
 .event-details p {
     font-size: 18px;
-    /* 원래 16px에서 18px로 증가 */
     line-height: 1.8;
     color: #555;
     margin-bottom: 20px;
@@ -70,7 +51,6 @@ body {
 
 .event-info h3 {
     font-size: 18px;
-    /* 원래 18px에서 18px로 유지 */
     color: #212529;
     margin-bottom: 20px;
 }
@@ -80,7 +60,6 @@ body {
     align-items: center;
     margin-bottom: 15px;
     font-size: 16px;
-    /* 원래 12px에서 16px로 증가 */
     color: #495057;
 }
 
@@ -88,7 +67,6 @@ body {
     color: rgb(193, 192, 255);
     margin-right: 12px;
     font-size: 16px;
-    /* 원래 12px에서 16px로 증가 */
 }
 
 .register-btn {
@@ -99,9 +77,7 @@ body {
 
 .register-btn a {
     padding: 10px 30px;
-    /* 원래 15px 40px에서 10px 30px로 줄임 */
     font-size: 16px;
-    /* 원래 22px에서 16px로 줄임 */
     background-color: #000;
     color: white;
     border-radius: 40px;
