--- a/src/main/resources/templates/user/MyPage.html
+++ b/src/main/resources/templates/user/MyPage.html
@@ -7,13 +7,14 @@
     <link href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/user/MyPage.css}">
+    <link rel="stylesheet" th:href="@{/css/fragments/header.css}">
+    <link rel="stylesheet" th:href="@{/css/fragments/footer.css}">
     <script src="/js/jquery-3.7.1.min.js"></script>
     <script src="/js/bootstrap/bootstrap.min.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <div th:include="fragments/header"></div>
+    <header th:replace="~{fragments/header :: headerFragment}">
     </header>
     <banner>
         <img th:src="@{/img/banner.png}" alt="banner"  height="240px">
@@ -78,8 +79,7 @@
 
             </div> <!-- container end -->
         </main>
-        <footer>
-            <div th:include="fragments/footer"></div>
+        <footer th:replace="~{fragments/footer :: footerFragment}">
         </footer>
 </body>
 </html>
