--- a/src/main/resources/templates/user/MyPagePortFolio.html
+++ b/src/main/resources/templates/user/MyPagePortFolio.html
@@ -8,11 +8,12 @@
     <script src="/js/jquery-3.7.1.min.js"></script>
     <script src="/js/bootstrap/bootstrap.min.js"></script>
     <link rel="stylesheet" th:href="@{/css/user/MyPagePortFolio.css}">
+    <link rel="stylesheet" th:href="@{/css/fragments/header.css}">
+    <link rel="stylesheet" th:href="@{/css/fragments/footer.css}">
     <title>Document</title>
 </head>
 <body>
-<header>
-    <div th:include="fragments/header"></div>
+<header th:replace="~{fragments/header :: headerFragment}">
 </header>
 <banner>
     <img th:src="@{/img/banner.png}" alt="banner"  height="240px">
@@ -84,8 +85,7 @@
             </div>
     </div> <!-- container end -->
 </main>
-    <footer>
-        <div th:include="fragments/footer"></div>
-    </footer>
+<footer th:replace="~{fragments/footer :: footerFragment}">
+</footer>
 </body>
 </html>
