--- a/src/main/resources/templates/user/MyPageUpload.html
+++ b/src/main/resources/templates/user/MyPageUpload.html
@@ -11,9 +11,6 @@
     <link rel="stylesheet" th:href="@{/css/user/MyPageUpload.css}">
 </head>
 <body>
-    <header>
-
-    </header>
     <main>
         <div class="mainWarap">
             <div class="contestWarap">
@@ -22,7 +19,7 @@
 <!--                        <div class="endDate info">8일</div>-->
 <!--                        <div class="type info">공공 기관</div>-->
                     </div>
-                    <div class="contitle"></div>
+                    <div class="contitle">작품 업로드</div>
                     <div class="applyInfo">
                         <div class="info"></div>
                         <div class="info"></div>
@@ -44,7 +41,7 @@
                 <!-- </section> -->
                 <!-- <section> -->
                 <div class="applyWarap">
-                    <div div class="applyInput">
+                    <div class="applyInput">
                         <div class="InputArea">
                             <label for="image" class="imageUpload">
                                 <div class="content">
@@ -77,12 +74,12 @@
                     <input type="radio" id="close" name="oc">
                     <label for="close" class="close">비공개</label>
                 </div>
+                <div class="back">
+                    <a href="/mypage" class="mypageback">마이페이지 돌아가기</a>
+                </div>
                 </div><!--applyWarap-->
             </section>
         </div>
     </main>
-    <footer>
-
-    </footer>
 </body>
 </html>
