--- a/src/main/resources/templates/notifications/eventList.html
+++ b/src/main/resources/templates/notifications/eventList.html
@@ -8,12 +8,15 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" th:href="@{/css/notifications/eventList.css}">
-
-    <!-- jQuery -->
+    <!-- jQuery 추가 -->
     <script src="https://code.jquery.com/jquery-3.6.4.js"
         integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+
+    <!-- 커스텀 CSS 및 JS 추가 -->
+    <link rel="stylesheet" th:href="@{/css/notifications/eventList.css}">
+    <link rel="stylesheet" th:href="@{/css/fragments/header.css}">
+    <link rel="stylesheet" th:href="@{/css/fragments/footer.css}">
+    <script th:src="@{/js/notifications/eventList.js}"></script>
 </head>
 
 <body>
