--- a/src/main/resources/templates/notifications/eventList.html
+++ b/src/main/resources/templates/notifications/eventList.html
@@ -26,6 +26,11 @@
 
     <!-- Main Content -->
     <div class="container mt-5">
+        <!-- 이벤트 등록 버튼 -->
+        <div class="d-flex justify-content-end mb-4">
+            <a href="/event/register" class="btn btn-primary">이벤트 등록</a>
+        </div>
+
         <div class="row row-cols-1 row-cols-md-4 g-4">
             <!-- 이벤트 카드 반복 -->
             <div class="col">
