--- a/src/main/resources/static/css/user/MyPagePortFolio.css
+++ b/src/main/resources/static/css/user/MyPagePortFolio.css
@@ -1,10 +1,3 @@
-@import url('https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css');
-
-* {
-    font-family: 'NanumSquare', sans-serif;
-    margin: 0px;
-    padding: 0px;
-}
 banner{
     display: grid;
     justify-content: center;
@@ -15,18 +8,15 @@ main{
 }
 .container{
     display: grid;
-    grid-area: container;
     width: 1200px;
     margin-top: 10px;
     grid-template-columns: 200px 2fr;
     grid-column-gap: 10px;
-    /* grid-template-rows: 100px, 2fr; */
     grid-template-areas:
     ". button-class"
     "sidebar portfolio"
     "sidebar content"
     "sidebar content";
-    /* border: 1px solid black; */
 }
 
 /* sidebar */
@@ -37,8 +27,9 @@ main{
     margin:10px;
     height: 400px;
     list-style-type: none;
-    border: 2px solid whitesmoke;
-    /* background-color: brown; */
+    border: 1px solid whitesmoke;
+    border-radius: 6px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.20);
 }
 .sidebar img {
     width: 100px;
@@ -63,6 +54,7 @@ main{
     background-color: white;
     padding: 10px 20px;
     border: 2px solid whitesmoke;
+    text-decoration-line: none;
     border-radius: 5px;
     cursor: pointer;
 }
@@ -83,6 +75,7 @@ main{
     color: #333;
 }
 /* sidebar 끝 */
+
 .button-class{
     display: flex;
     grid-area: button-class;
@@ -114,7 +107,7 @@ main{
 .tab-select label {
     background-color: #d6d6d6;
     padding: 7px;
-    margin-left: 10px;
+    /*margin-left: 10px;*/
     border-radius: 10px;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -123,6 +116,9 @@ main{
 .tab-select input[type="radio"]:checked + label {
     background-color: black; /* 선택된 탭 강조 */
     color: white;
+}
+.tab-select .tab-win{
+    margin-left: 10px;
 }
 
 
@@ -134,7 +130,6 @@ main{
 .portfolio-content{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    /* width: 1100px; */
     grid-area: content;
     justify-content: start;
     align-content: start;
@@ -144,8 +139,6 @@ main{
     border: 1px solid gainsboro;
     float: left;
     margin: 5px;
-    /*margin-top: -20px;*/
-    /*margin-left: 10px;*/
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.20);
     width: 180px;
     height: 256px;
