--- a/src/main/resources/templates/user/MyPage.html
+++ b/src/main/resources/templates/user/MyPage.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!--    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>-->
     <link href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/user/MyPage.css}">
@@ -14,8 +13,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header th:replace="~{fragments/header :: headerFragment}">
-    </header>
+    <header th:replace="~{fragments/header :: headerFragment}"></header>
     <banner>
         <img th:src="@{/img/banner.png}" alt="banner"  height="240px">
     </banner>
