--- a/src/main/resources/templates/user/MyPagePortFolio.html
+++ b/src/main/resources/templates/user/MyPagePortFolio.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css" rel="stylesheet">
-    <script src="/js/jquery-3.7.1.min.js"></script>
-    <script src="/js/bootstrap/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/user/MyPagePortFolio.css}">
     <link rel="stylesheet" th:href="@{/css/fragments/header.css}">
     <link rel="stylesheet" th:href="@{/css/fragments/footer.css}">
+    <script src="/js/jquery-3.7.1.min.js"></script>
+    <script src="/js/bootstrap/bootstrap.min.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -21,14 +21,14 @@
 <main>
     <div class="container">
         <div class="sidebar">
-            <img th:src="@{/img/quokka.jpg}"><br>
+            <img th:src="@{/img/quokka.jpg}" alt="quokka"><br>
             <div class="username">
                 쿼카
             </div>
             <div>
-                http://naver.com/
+                https://naver.com/
             </div><br>
-            <button class="edit-profile">프로필 수정하기</button>
+            <a href="/profileWrite" class="edit-profile">프로필 수정하기</a>
             <div class="activity">
                 <div class="section-title">
                     <h6>라우드 활동</h6>
