--- a/src/main/resources/static/css/user/MyPage.css
+++ b/src/main/resources/static/css/user/MyPage.css
@@ -125,10 +125,11 @@ main{
 .commition1{
     height: 100px;
     margin: 10px; 
-    /* padding: 10px; */
+     padding: 10px;
     /* background-color: brown; */
     overflow: auto;
     border: 2px solid whitesmoke;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.20);
 }
 .management .imagecard{
     display: flex;
