--- a/src/main/resources/templates/contest/ContestPay2.html
+++ b/src/main/resources/templates/contest/ContestPay2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<div class="container">
+<div class="Contestview">
     <form action="/contest/payment/submit" method="post" enctype="multipart/form-data">
         <h1>결제 정보를 확인해주세요.</h1>
         <div class="info">
