--- a/src/main/resources/templates/contest/ContestUpload1.html
+++ b/src/main/resources/templates/contest/ContestUpload1.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<div class="container">
+<div class="Contestupload1">
     <h1>예산은 어떻게 되나요?</h1>
     <form action="/contest1" method="post" enctype="multipart/form-data">
         <h3>콘테스트 제목</h3>
