--- a/src/main/resources/templates/contest/ContestUpload.html
+++ b/src/main/resources/templates/contest/ContestUpload.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,38 +8,26 @@
     <title>Contest Upload Form</title>
 </head>
 <body>
-<div class="container">
+<div class="Contestupload">
     <h1>어떤 작품이 필요하세요?</h1>
     <form action="/contest" method="post" enctype="multipart/form-data">
-<!--        <label for="conCompanyName">회사명(단체명)</label>-->
+
         <h3>회사명(단체명)</h3>
         <input type="text" id="conCompanyName" name="conCompanyName" placeholder="회사명을 입력해 주세요" required>
 
-
-<!--        <label for="conOneLiner">한 줄 소개</label>-->
         <h3>한 줄 소개</h3>
         <textarea id="conOneLiner" name="conOneLiner" rows="3" placeholder="우리 서비스는 OO을 판매하는 회사입니다." required></textarea>
 
-<!--        <label for="conType">업종</label>-->
         <h3>업종</h3>
         <select id="conType" name="conType" required>
             <option value="">업종 선택</option>
-            <option value="식당/카페">식당/카페</option>
-            <option value="식품/건강">식품/건강</option>
-            <option value="IT/미디어">IT/미디어</option>
-            <option value="뷰티/패션">뷰티/패션</option>
-            <option value="병원">병원</option>
-            <option value="반려동물">반려동물</option>
-            <option value="교육/육아">교육/육아</option>
-            <option value="공공기관">공공기관</option>
-            <option value="일반기타">일반기타</option>
+            <!-- DB에서 가져온 업종 목록을 Thymeleaf로 동적으로 표시 -->
+            <option th:each="type : ${contestTypes}" th:value="${type}" th:text="${type}"></option>
         </select>
 
-<!--        <label for="conLogoName">로고명</label>-->
         <h3>로고명</h3>
         <input type="text" id="conLogoName" name="conLogoName" placeholder="로고명을 입력해 주세요." required>
 
-<!--        <label for="conBriefing">브리핑</label>-->
         <h3>브리핑</h3>
         <textarea id="conBriefing" name="conBriefing" rows="5" placeholder="브리핑을 입력해 주세요" required></textarea>
 
