헤더, 콘텐츠, 푸터 간의 간격 일관성 조정
헤더, 콘텐츠, 푸터 간의 간격 일관성 조정

--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -63,7 +63,7 @@
     <div class="error_cont">
         <span>404 ERROR</span>
         <br>
-        <a href="/">BACK MAIN</a>
+        <a href="/main">BACK MAIN</a>
     </div>
 </body>
 
