--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -14,7 +14,7 @@
     <script src="/js/bootstrap/bootstrap.min.js"></script>
 </head>
 <body>
-<header class="header" th:fragment="headerFragment">
+<header class="header" th:fragment="headerFragment" style="margin-bottom: 100px;">
     <nav class="navbar">
         <div class="navbar-left">
             <a class="navbar-brand" href="/main">
