--- a/src/main/resources/templates/list/main.html
+++ b/src/main/resources/templates/list/main.html
@@ -4,17 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <!-- FontAwesome CSS 추가 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/line-awesome/1.3.0/line-awesome/css/line-awesome.min.css"> -->
-    <!-- <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script> -->
-    <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
-    <!--  기존 방식 :  <link rel="stylesheet" href="main.css">-->
-    <!--    thymeleaf를 이용한 CSS include-->
-    <link rel="stylesheet" th:href="@{/css/list/main.css}"/>
+
+    <!-- jQuery 추가 (기존 방식 및 새 방식 혼합) -->
+    <script src="https://code.jquery.com/jquery-3.6.4.js" 
+            integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" 
+            crossorigin="anonymous"></script>
+    <script src="/js/jquery-3.7.1.min.js"></script>
+
+    <!-- Bootstrap 추가 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="/js/bootstrap/bootstrap.min.js"></script>
+
+    <!-- Custom CSS 및 헤더, 푸터 CSS 추가 -->
+    <link rel="stylesheet" th:href="@{/css/list/main.css}">
     <link rel="stylesheet" th:href="@{/css/fragments/header.css}">
     <link rel="stylesheet" th:href="@{/css/fragments/footer.css}">
-    <!--   기존 방식 : <script src="main.js"></script>-->
-    <!--    thymeleaf를 이용한 JS include-->
+
+    <!-- Custom JS 추가 -->
     <script th:src="@{/js/list/main.js}"></script>
 </head>
 <body>
