푸터 헤더 간격 다시 수정
푸터 헤더 간격 다시 수정

--- a/src/main/resources/static/css/fragments/footer.css
+++ b/src/main/resources/static/css/fragments/footer.css
@@ -5,7 +5,7 @@
     text-align: center;
     border-top: 3.2px solid rgb(193, 192, 255);
     font-size: 12px;
-    margin-top: auto;
+    margin-top: 100px;
 }
 
 .footer .contact-info {
