--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,20 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>헤더</title>
-    <!-- NanumSquare 폰트와 Bootstrap 추가 -->
-    <link href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- 커스텀 CSS -->
-    <link rel="stylesheet" th:href="@{/css/fragments/header.css}">
-    <!-- jQuery와 Bootstrap JS 추가 -->
-    <script src="/js/jquery-3.7.1.min.js"></script>
-    <script src="/js/bootstrap/bootstrap.min.js"></script>
-</head>
-<body>
-<header class="header" th:fragment="headerFragment">
+
+    <th:block th:fragment="headerFragment">
+    <!--<header class="header" th:fragment="headerFragment">-->
+<header class="header">
     <nav class="navbar">
         <div class="navbar-left">
             <a class="navbar-brand" href="/main">
@@ -41,5 +30,5 @@
         </div>
     </nav>
 </header>
-</body>
+    </th:block>
 </html>
