--- a/src/main/resources/static/css/list/contestList.css
+++ b/src/main/resources/static/css/list/contestList.css
@@ -19,13 +19,6 @@
 }
 
 
-/* @font-face {
-    font-family: 'goorm-sans-serif';
-    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2408@1.0/goorm-sans-serif.woff2') format('woff2');
-    font-weight: 700;
-    font-style: normal;
-} */
-
 *
 {
     font-family: 'NanumSquare';
@@ -39,18 +32,12 @@ a
  text-decoration: none;
 }
 
-/* header 영역 */
-header
-{
-    height: 145px;
-}
-
-
 /* main 영역 */
 main
 {
     display: flex;
     justify-content: center;
+    background-color: var(--color-white);
 }
 
 .mainWrap
@@ -186,8 +173,6 @@ section
 
 .listChar
 {
-    /* display: flex; */
-    /* align-items: center; */
     padding: 20px 40px;
     box-sizing: border-box;
     width: 20%;
@@ -232,12 +217,4 @@ section
     justify-content: flex-end;
     font-size: var(--font-size-12);
     margin-bottom: 0;
-}
-
-
-/* footer 영역 */
-footer
-{
-    height: 322px;
-    border-top: 1px solid var(--line-gray);
 }
