콘테스트 목록 페이지 구현
콘테스트 목록 페이지 구현

--- a/src/main/resources/templates/list/contestList.html
+++ b/src/main/resources/templates/list/contestList.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" th:href="@{/css/fragments/footer.css}">
 </head>
 <body>
-    <header>
+    <header th:replace="~{fragments/header :: headerFragment}">
 
     </header>
     <main>
@@ -119,7 +119,7 @@
             </section><!--section-->
         </div>
     </main>
-    <footer>
+    <footer th:replace="~{fragments/footer :: footerFragment}">
 
     </footer>
 </body>
