--- a/src/main/resources/templates/list/applyInfDetail.html
+++ b/src/main/resources/templates/list/applyInfDetail.html
@@ -1,33 +1,26 @@
 <!DOCTYPE html>
-<html lang="en"  xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="/fragments/layout">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-        <!-- font-awesome include -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-        <!-- bootstrap-icons include -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/line-awesome/1.3.0/line-awesome/css/line-awesome.min.css"> -->
-        <!-- <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script> -->
-        <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+    <title>페이지</title>
 
-    <!-- 기존 방식 : <link rel="stylesheet" href="applyinfo_detail.css">-->
-    <!--    thymeleaf를 이용한 CSS include-->
-    <link rel="stylesheet" th:href="@{/css/list/applyInfDetail.css}"/>
+    <!-- jQuery 추가 -->
+    <script src="https://code.jquery.com/jquery-3.6.4.js"
+            integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- 커스텀 CSS 및 JS 추가 -->
+    <link rel="stylesheet" th:href="@{/css/list/applyInfDetail.css}">
     <link rel="stylesheet" th:href="@{/css/fragments/header.css}">
     <link rel="stylesheet" th:href="@{/css/fragments/footer.css}">
-
-    <!--        <script src="applyinfo_detail.js"></script>-->
-    <!--    thymeleaf를 이용한 JS include-->
     <script th:src="@{/js/list/applyInfDetail.js}"></script>
-</head>
-<body>
-<!--    <header>-->
-    <header th:replace="~{fragments/header :: headerFragment}">
 
-    </header>
+</head>
+<th:block layout:fragment="content">
     <main>
         <div class="banner"></div><!--banner-->
 
@@ -136,8 +129,7 @@
             </div><!--mainWrap-->
         </section>
     </main>
-    <footer th:replace="~{fragments/footer :: footerFragment}">
 
-    </footer>
-</body>
+</th:block>
+
 </html>
