--- a/src/main/resources/templates/notifications/noticeList.html
+++ b/src/main/resources/templates/notifications/noticeList.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="/fragments/layout">
 
 <head>
     <meta charset="UTF-8">
     <title>공지사항</title>
 
-    <!-- Bootstrap CSS & JS 추가 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
     <!-- jQuery 추가 -->
     <script src="https://code.jquery.com/jquery-3.6.4.js"
-        integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+            integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- 커스텀 CSS 및 JS 추가 -->
     <link rel="stylesheet" th:href="@{/css/notifications/noticeList.css}">
     <link rel="stylesheet" th:href="@{/css/fragments/header.css}">
     <link rel="stylesheet" th:href="@{/css/fragments/footer.css}">
     <script th:src="@{/js/notifications/noticeList.js}"></script>
-</head>
 
-<body>
-    <!-- Header Fragment -->
-    <header th:replace="~{fragments/header :: headerFragment}"></header>
+</head>
+<th:block layout:fragment="content">
 
     <!-- Main Content -->
     <div class="container" th:fragment="content">
@@ -93,9 +91,6 @@
         </div>
     </div>
 
-    <!-- Footer Fragment -->
-    <footer th:replace="~{fragments/footer :: footerFragment}"></footer>
-
-</body>
+</th:block>
 
 </html>
