--- a/src/main/resources/templates/notifications/noticeWrite.html
+++ b/src/main/resources/templates/notifications/noticeWrite.html
@@ -1,32 +1,27 @@
+
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="/fragments/layout">
 
 <head>
     <meta charset="UTF-8">
     <title>공지사항 등록</title>
+
+    <!-- jQuery 추가 -->
+    <script src="https://code.jquery.com/jquery-3.6.4.js"
+            integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.4.js"
-        integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
-
-    <!-- Custom CSS -->
+    <!-- 커스텀 CSS 및 JS 추가 -->
     <link rel="stylesheet" th:href="@{/css/notifications/noticeWrite.css}">
-
-    <!-- Header & Footer CSS -->
     <link rel="stylesheet" th:href="@{/css/fragments/header.css}">
     <link rel="stylesheet" th:href="@{/css/fragments/footer.css}">
-
-    <!-- Custom JS -->
     <script th:src="@{/js/notifications/noticeWrite.js}"></script>
+
 </head>
-
-<body>
-    <!-- Header Fragment -->
-    <header th:replace="~{fragments/header :: headerFragment}">
-    </header>
-
+<th:block layout:fragment="content">
     <!-- Main Content -->
     <div class="container">
         <h2>공지사항 등록</h2>
@@ -55,10 +50,6 @@
         </form>
     </div>
 
-    <!-- Footer Fragment -->
-    <footer th:replace="~{fragments/footer :: footerFragment}">
-    </footer>
-
-</body>
+</th:block>
 
 </html>
