--- a/src/main/resources/templates/user/portfolioDetail.html
+++ b/src/main/resources/templates/user/portfolioDetail.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
-<html lang="en"  xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-        <!-- font-awesome include -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-        <!-- bootstrap-icons include -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/line-awesome/1.3.0/line-awesome/css/line-awesome.min.css"> -->
-        <!-- JQuery import -->
-        <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-        <!-- <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script> -->
-        <!-- js, css file import -->
-<!--        <link rel="stylesheet" href="portfolio_detail.css">-->
-<!--        <script src="portfolio_detail.js"></script>-->
-    <link rel="stylesheet" th:href="@{/css/user/portfolioDetail.css}"/>
+    <!-- font-awesome include -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <!-- bootstrap-icons include -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/line-awesome/1.3.0/line-awesome/css/line-awesome.min.css"> -->
+    <!-- JQuery import -->
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script> -->
+    <!-- js, css file import -->
+    <!--        <link rel="stylesheet" href="portfolio_detail.css">-->
+    <!--        <script src="portfolio_detail.js"></script>-->
+    <link rel="stylesheet" th:href="@{/css/user/portfolioDetail.css}" />
     <link rel="stylesheet" th:href="@{/css/fragments/header.css}">
     <link rel="stylesheet" th:href="@{/css/fragments/footer.css}">
     <script type="text/javascript" th:src="@{/js/user/portfolioDetail.js}"></script>
 </head>
+
 <body>
     <header th:replace="~{fragments/header :: headerFragment}">
 
@@ -32,9 +36,9 @@
             <div class="mainWrap">
                 <div class="portfolioWrap">
                     <div class="portfolioMain">
-                    <!-- 포토폴리오 첫번 째 이미지가 출력될 부분 -->
+                        <!-- 포토폴리오 첫번 째 이미지가 출력될 부분 -->
                     </div><!--portfolioMain-->
-                    
+
                     <div class="description">
                         <div class="title">
                             담벼리
@@ -62,10 +66,10 @@
                         <div class="title">디자이너 정보</div>
                         <div class="info">
                             <div class="user">waylog</div>
-                                <div class="user more">
+                            <div class="user more">
                                 디자이너 소개
                                 <i class="fa-solid fa-angle-down"></i>
-                                </div>
+                            </div>
                         </div>
                         <div class="profileInfo">
                             웨이로그디자인은 심플하고 감각적인 디자인을 추구합니다. : )
@@ -73,7 +77,7 @@
                             심플하면서 의미를 가득 살린 웨이로그만의 디자인으로 내 브랜드에 감성을 더해가세요 : )
                         </div>
                     </figure>
-                    
+
                     <figure>
                         <div class="title">디자이너님의 다른 작품</div>
                         <div class="cardList">
@@ -97,11 +101,12 @@
                     <button type="button">디자이너에게 문의하기</button>
                 </aside><!--sectionInfo-->
             </div><!--mainWrap-->
-            
+
         </section>
     </main>
     <footer th:replace="~{fragments/footer :: footerFragment}">
 
     </footer>
 </body>
+
 </html>
