--- a/src/main/resources/static/css/notifications/noticeWrite.css
+++ b/src/main/resources/static/css/notifications/noticeWrite.css
@@ -12,7 +12,7 @@
     font-size: 28px;
     text-align: center;
     margin-bottom: 30px;
-    color: black;
+    color: rgb(193, 192, 255);
     font-weight: 700;
 }
 
