--- a/src/main/resources/templates/contest/ContestView.html
+++ b/src/main/resources/templates/contest/ContestView.html
@@ -9,7 +9,7 @@
 <body>
 
 <div class="Contestview">
-    <form action="/contestview" method="post" enctype="multipart/form-data">
+    <form action="/contest/view" method="post" enctype="multipart/form-data">
         <div class="Contestviewheader">
             <h1><p>제목 : <span th:text="${contestUploadDTO.conTitle}"></span></p></h1>
             <p>회사명 : <span th:text="${contestUploadDTO.conCompanyName}"></span></p>
