--- a/src/main/resources/templates/contest/ContestPay2.html
+++ b/src/main/resources/templates/contest/ContestPay2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<div class="Contestview">
+<div class="Contestpayment">
     <form action="/contest/payment/submit" method="post" enctype="multipart/form-data">
         <h1>결제 정보를 확인해주세요.</h1>
         <div class="info">
@@ -34,7 +34,7 @@
 
         <div class="btn-container">
             <a href="javascript:history.back()" class="btn btn-back">이전</a>
-            <a href="#" class="btn">결제하기</a>
+            <a href="/contest/payment/submit" class="apibtn">결제하기</a>
         </div>
     </form>
 </div>
