--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -19,6 +19,7 @@
         <div class="nav-center">
             <a class="nav-link" href="#">공모전</a>
             <a class="nav-link" href="#">디자인 의뢰</a>
+            <a class="nav-link" href="#">포트폴리오</a>
             <a class="nav-link" href="#">이벤트</a>
             <a class="nav-link" href="#">공지사항</a>
         </div>
