--- a/src/main/resources/templates/user/MyPagePortFolio.html
+++ b/src/main/resources/templates/user/MyPagePortFolio.html
@@ -21,9 +21,9 @@
 
 </head>
 <th:block layout:fragment="content">
-<banner>
+<!-- <banner>
     <img th:src="@{/img/banner.png}" alt="banner"  height="240px">
-</banner>
+</banner> -->
 <main>
     <div class="container">
         <div class="sidebar">
