--- a/src/main/resources/static/css/fragments/header.css
+++ b/src/main/resources/static/css/fragments/header.css
@@ -80,6 +80,10 @@ html, body {
     transform: scale(1.1);
 }
 
+.nav-link:active {
+    color: rgb(193, 192, 255); /* 클릭 후 색상 유지 */
+}
+
 /* 오른쪽 로그인/회원가입 링크 */
 .navbar-right {
     display: flex;
