--- a/src/main/resources/static/css/user/MyPageUpload.css
+++ b/src/main/resources/static/css/user/MyPageUpload.css
@@ -28,9 +28,7 @@ main
 /* 콘테스트 정보 영역 */
 .contestWarap
 {
-    height: 114px;
     width: 100%;
-    /* padding: 15px 35px 15px 35px; */
     padding: 15px 0;
     display: flex;
     justify-content: space-between;
@@ -61,7 +59,6 @@ main
 {
     font-size: var(--font-size-32);
     font-weight: bold;
-    margin-top: 100px;
 }
 
 .info
@@ -90,7 +87,6 @@ section
  display: flex;
  width: 100%;
  gap: 30px;
- /* margin-bottom: 90px; */
  margin: 60px 0 90px 0;
 }
 
@@ -106,7 +102,7 @@ section
     /* border: 1px solid var(--line-gray); */
 }
 
-input[type="text"]
+.applyContent input[type="text"]
 {
     width: 100%;
     height: 50px;
@@ -194,7 +190,7 @@ textarea
     resize: none;
 }
 
-button
+.temporary, .apply
 {
     width: 100%;
     height: 70px;
