--- a/src/main/resources/templates/list/main.html
+++ b/src/main/resources/templates/list/main.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" th:href="@{/css/fragments/footer.css}">
     <script th:src="@{/js/list/main.js}"></script>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <th:block layout:fragment="content">
     <main>
