--- a/src/main/resources/templates/user/MyPage.html
+++ b/src/main/resources/templates/user/MyPage.html
@@ -17,13 +17,13 @@
     <link rel="stylesheet" th:href="@{/css/user/MyPage.css}">
     <link rel="stylesheet" th:href="@{/css/fragments/header.css}">
     <link rel="stylesheet" th:href="@{/css/fragments/footer.css}">
-    <script type="text/javascript" th:src="@{/js/user/portfolioDetail.js}"></script>
+    <script type="text/javascript" th:src="@{/js/user/MyPage.js}"></script>
 
 </head>
 <th:block layout:fragment="content">
-    <banner>
+    <!-- <banner>
         <img th:src="@{/img/banner.png}" alt="banner"  height="240px">
-    </banner>
+    </banner> -->
     <main>
         <div class="container">
             <div class="sidebar">
