--- a/src/main/resources/templates/user/MyPageUpload.html
+++ b/src/main/resources/templates/user/MyPageUpload.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" th:href="@{/css/user/MyPageUpload.css}">
     <link rel="stylesheet" th:href="@{/css/fragments/header.css}">
     <link rel="stylesheet" th:href="@{/css/fragments/footer.css}">
-    <script type="text/javascript" th:src="@{/js/user/portfolioDetail.js}"></script>
+    <script type="text/javascript" th:src="@{/js/user/MyPageUpload.js}"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 </head>
