--- a/src/main/resources/templates/notifications/eventList.html
+++ b/src/main/resources/templates/notifications/eventList.html
@@ -29,8 +29,7 @@
     <div class="container mt-5">
         <!-- 이벤트 등록 버튼 -->
         <div class="d-flex justify-content-end mb-4">
-<!--            <a href="/event/register" class="btn btn-primary">이벤트 등록</a>-->
-            <a href="/event/register" class="btn">이벤트 등록</a>
+            <a th:href="@{/event/admin/write}" class="btn">이벤트 등록</a>
         </div>
 
         <div class="row row-cols-1 row-cols-md-4 g-4">
