헤더 및 푸터 연결 및 네비게이션 설정
* 타임리프로 연결
* 네비게이션 타임리프 연결
* 공지사항&푸터 수정(푸터 제일 아래에 고정안됨)

--- a/src/main/resources/static/css/fragments/header.css
+++ b/src/main/resources/static/css/fragments/header.css
@@ -1,9 +1,7 @@
 @import url('https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css');
 
-html, body {
+html {
     font-family: 'NanumSquare', sans-serif;
-    margin: 0;
-    padding: 0;
 }
 
 /* 헤더 스타일 */
