--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -17,16 +17,16 @@
             </div>
         </div>
         <div class="nav-center">
-            <a class="nav-link" href="#">공모전</a>
-            <a class="nav-link" href="#">디자인 의뢰</a>
-            <a class="nav-link" href="#">포트폴리오</a>
-            <a class="nav-link" href="#">이벤트</a>
-            <a class="nav-link" href="#">공지사항</a>
+            <a class="nav-link" th:href="@{/contest/list}">공모전</a>
+            <a class="nav-link" th:href="@{/contest}">디자인 의뢰</a>
+            <a class="nav-link" th:href="@{/portfolio/list}">포트폴리오</a>
+            <a class="nav-link" th:href="@{/event/list}">이벤트</a>
+            <a class="nav-link" th:href="@{/notice/list}">공지사항</a>
         </div>
         <div class="navbar-right">
             <div class="login-links">
-                <a class="nav-link" href="#">로그인</a>
-                <a class="nav-link" href="#">회원가입</a>
+                <a class="nav-link" th:href="@{/login}">로그인</a>
+                <a class="nav-link" th:href="@{/users/register}">회원가입</a>
             </div>
         </div>
     </nav>
