s3테스트중 warn해결
s3테스트중 warn해결(따로 이슈생성해서 전체 파일 수정해야됨)

--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <!-- 헤더 프래그먼트 불러오기 -->
-<th:block th:replace="fragments/header :: headerFragment"></th:block>
+<th:block th:replace="~{fragments/header :: headerFragment}"></th:block>
 
 <body>
 <!-- 레이아웃 콘텐츠 삽입 -->
@@ -9,5 +9,5 @@
 </body>
 
 <!-- 푸터 프래그먼트 불러오기 -->
-<th:block th:replace="fragments/footer :: footerFragment"></th:block>
+<th:block th:replace="~{fragments/footer :: footerFragment}"></th:block>
 </html>
