--- a/src/main/resources/templates/notifications/eventWrite.html
+++ b/src/main/resources/templates/notifications/eventWrite.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="/fragments/layout">
+      layout:decorate="~{/fragments/layout}">
 
 <head>
     <meta charset="UTF-8">
@@ -32,16 +32,16 @@
             <div class="row">
                 <div class="col-md-6 mb-3">
                     <label for="date">날짜</label>
-                    <input type="date" id="date" name="date" class="form-control" required>
+                    <input type="date" id="date" name="date" class="form-control">
                 </div>
                 <div class="col-md-6 mb-3">
                     <label for="time">시간</label>
-                    <input type="time" id="time" name="time" class="form-control" required>
+                    <input type="time" id="time" name="time" class="form-control">
                 </div>
             </div>
             <div class="mb-3">
                 <label for="content">이벤트 설명</label>
-                <textarea id="content" name="content" class="form-control" placeholder="이벤트 설명을 입력하세요" required></textarea>
+                <textarea id="content" name="content" class="form-control" placeholder="이벤트 설명을 입력하세요"></textarea>
             </div>
             <div class="mb-3">
                 <label for="file">이벤트 이미지</label>
